--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.senamit.newspaperapps">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -20,7 +19,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.Searchable"
+                android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".SearchResult"></activity>
     </application>
 
-</manifest>
+</manifest> <!-- if the error comes in mainfest during build...just dont try to edit the debug mainfest as once u click on --><!-- error ..it will redirect to debug mainfest...so close it and do changes in androidmainfest pagge -->
