--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".SearchResult" />
-        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".WebViewActivity" />
+        <activity android:name=".Fragment_one" />
     </application>
 
 </manifest> <!-- if the error comes in mainfest during build...just dont try to edit the debug mainfest as once u click on --><!-- error ..it will redirect to debug mainfest...so close it and do changes in androidmainfest pagge -->
