--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
     <application
         android:allowBackup="true"
@@ -25,8 +25,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".SearchResult" />
-        <activity android:name=".WebViewActivity" />
-        <activity android:name=".Fragment_one" />
+
     </application>
 
 </manifest> <!-- if the error comes in mainfest during build...just dont try to edit the debug mainfest as once u click on --><!-- error ..it will redirect to debug mainfest...so close it and do changes in androidmainfest pagge -->
