--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,8 +26,14 @@
                 android:name="android.app.Searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".SearchResult" />
+        <activity
+            android:name=".SearchResult"
+            android:windowSoftInputMode="adjustPan">
 
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest> <!-- if the error comes in mainfest during build...just dont try to edit the debug mainfest as once u click on --><!-- error ..it will redirect to debug mainfest...so close it and do changes in androidmainfest pagge -->
